doctorjpadao countall